styles/details.scss
@import 'layout/flex';
@import 'layout/mixins';

$line-height: 1.5rem !default;
$column-width: 1rem !default;
$secondary-opacity: .6;

.details {
  position: relative;
  overflow-y: auto;
  overflow-x: hidden;
  background: white;
  margin: (-$line-height) (-$column-width);

  @media (min-width: 40rem) {
    padding: 0 $column-width $line-height*3;
    margin: 0;
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
  }

  > nav {
    @include flex-row;
    > .close-button { margin-left: auto; }
  }

  > header,
  > main.content {
    @include flex-column;

    > section { padding: ($line-height / 2) $column-width; }

    section.webshot {
      padding: 0;
      margin-bottom: $line-height;
      align-self: center;
    }

    .webshot,
    .comments {
      order: 0;
    }

    .info,
    .recommendations {
      order: 1;
    }

    @media (min-width: 60rem) {
      flex-direction: row;

      section.webshot,
      section.recommendations {
        flex: 0 0 32rem;
      }

      section.info,
      section.comments {
        flex: 1 1 auto;
      }

      .webshot,
      .recommendations {
        order: 0;
      }

      .info,
      .comments {
        order: 1;
      }
    }
  }

  > header {
    background: #ECEFF1;
    padding: $line-height $column-width;
    margin: 0 (-$column-width) $line-height;
  }
}

.details section.info {
  .title {
    font-size: $line-height;
    line-height: $line-height;
    margin-bottom: $line-height / 2;
    color: rgba(0,0,0,.9);

    &:hover {
      color: #0277BD;
      cursor: pointer;
    }
  }

  .url {
    font-size: .75rem;
    line-height: $line-height;
    margin-bottom: $line-height / 2;
    opacity: $secondary-opacity;
    color: #0277BD;
    cursor: pointer;
    transition: opacity .2s ease;

    &:before {
      content: "\f0c1";
      font-family: FontAwesome;
      margin-right: $column-width;
    }

    &:hover {
      opacity: 1;

      &:before {
        text-decoration: none;
      }
    }
  }

  .user {
    font-size: .75rem;
    line-height: $line-height;
  }

  .description {
    font-size: 1rem;
    line-height: $line-height;
    margin: ($line-height / 2) 0;
    color: rgba(0,0,0, $secondary-opacity);
  }

  .category.tags > .tag {
    background: #EF6C00;
    border-color: #DD2C00;
  }

  .tags {
    opacity: $secondary-opacity;
    margin: $line-height 0;

    > header {
      flex: 1 1 100%;
      font-size: .75rem;
      text-transform: uppercase;
      font-weight: 600;
    }
  }

  .statistics {
    @include flex-row;
    border-top: 1px solid rgba(0,0,0,.1);

    > .date {
      align-self: center;
      white-space: nowrap;
      margin-right: auto;
      color: rgba(0,0,0,0.6);
      font-size: .75rem;
      line-height: $line-height;
      font-weight: 400;
    }

    > .splitter {
      align-self: center;
      width: 1px;
      height: 1rem;
      margin: 0 $column-width;
      background: rgba(0,0,0,.2);
    }

    > .button {
      height: $line-height * 2;
      margin: 0;
      color: rgba(0,0,0,0.8);
    }

    > .comment-button {
      order: 99;
      margin-left: 0;
      margin-right: 0;
    }
  }
}

.close-button {
  display: inline-flex;
  cursor: pointer;
  position: relative;
  margin: 0.75rem 1rem;
  width: 3rem;
  height: 3rem;
  opacity: .4;
  transition: all .3s ease;

  &:after, &:before {
    content: '';
    position: absolute;
    left: 50%;
    top: 50%;
    background: rgba(0,0,0,.3);
    transform: translate(-50%, -50%) rotate(45deg);
    transform-origin: 50% 50%;
    transition: all .3s ease;
  }

  &:before { @include size(2px, 75%); }
  &:after { @include size(75%, 2px); }

  &:hover {
    opacity: 1;
    transform: scale(1.25);
  }
}

.comments {
  @include flex-column;
}

.comment {
  padding: ($line-height / 2) 0;
  border-bottom: 1px solid rgba(0,0,0,.1);

  > header, > footer {
    font-size: .75rem;
    line-height: $line-height;
    font-weight: 600;
  }

  > .content {
    font-size: 1rem;
    line-height: $line-height;
    font-weight: 300;
    margin: ($line-height/2) 0;
  }

  > footer {
    opacity: $secondary-opacity;
  }
}

.comments > .no-comments {
  opacity: $secondary-opacity;
  color: rgba(0,0,0,$secondary-opacity);
  font-size: 1.125rem;
  line-height: $line-height;
  margin: ($line-height * 2) 0;
}

.add-comment {
  margin: $line-height 0;

  header {
    font-size: .75rem;
    opacity: $secondary-opacity;
    text-transform: uppercase;
    font-weight: 600;
    line-height: $line-height;
    margin: ($line-height / 2) 0;
  }

  textarea {
    width: 100%;
    max-width: 100%;
    background: rgba(0, 0, 0, 0.05);
    border: none;
    outline: none;
    padding: ($line-height / 2) $column-width;
    font-weight: 300;
    transition: transform .3s ease;
  }

  .feedback {
    @include flex-row;
    text-transform: uppercase;
    font-size: .625rem;
    font-weight: 600;
    color: #37474F;

    &.error {
      color: #d50000;
    }

    &.success {
      color: #1B5E20;
    }

    &.info {
      color: #0D47A1;
    }
  }
}

.recommendations {
  @include flex-rows;
  align-content: flex-start;

  > header {
    flex: 1 1 100%;
  }
}

.website.widget.small {
  flex: 1 1 15rem;
  height: 10rem;
  min-height: auto;
  border-radius: 0;
  box-shadow: none;
  border-width: 1px;
  border-color: rgba(0,0,0,0.1);

  & > .main {
    padding: ($line-height / 2) $column-width;
    background: rgba(255,255,255,.8);

    > .title {
      @include flex-center;
      align-items: flex-start;
      text-align: center;
      font-size: .75rem;
      line-height: .75rem;
      min-height: 1.5rem;
      max-height: 1.5rem;
    }
  }

  & > .secondary > .description {
    display: none;
    max-height: 0;
    font-size: .75rem;
    line-height: .75rem;
  }

  &:hover {
    border-color: orangered;
  }

  @media (min-width: 60rem) {
    flex: 0 0 15rem;
  }
}

